# goph420-w2025-lab02

./: .gitignore  README.md  pyproject.toml
examples/: integrate_gauss.py  plot_standard_lagrange.py  reverse_axis.py  test_interpolation.py
src/goph420_lab02/: interpolation.py
