[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab02"
version = "0.0.1"
authors = [
  { name = "Brandon Karchewski", email = "brandon.karchewski@ucalgary.ca" },
  { name = "Oyedemi Joshua", email = "joshua.oyedem@ucalgary.ca" },
  { name = "Colin Maloney", email = "colin.maloney@ucalgary.ca" },
  { name = "Sydney Pasloski", email = "sydney.pasloski@ucalgary.ca" },
  { name = "Ayooluwa Popoola", email = "ayooluwa.popoola@ucalgary.ca"},
  { name = "Avneet Kaur", email = "avneet.kaur3@ucalgary.ca"},
  { name = "Declan Fitzpatrick", email = "declan.fitzpatrick@ucalgary.ca"}
]
description = "Lab #2 Finite Element Method for Heat Conduction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/karcheba1/goph420-w2025-lab02"
